--- a/diffblue.yml
+++ b/diffblue.yml
@@ -156,106 +156,12 @@ phases:
       # Set an upper bound on loop unwinding.
       unwind: 6
 units:
-#Target TGF: 398.383119658
-# - methods: 90
-# - complexity: 1019
-# - construction: 27.8121794872
-# - dependency: 30.6666666667
+  # Target Coverage: Unknown %
   - target:
     - dir: client/target/classes
-      file: cn/wildfirechat/proto/WFCMessage$ChannelInfo.class
+      file: io/moquette/spi/impl/security/AES.class
       sourceDir: client/src/main/java
-      sourceFile: cn/wildfirechat/proto/WFCMessage.java
-#Target TGF: 427.403525641
-# - methods: 96
-# - complexity: 1401
-# - construction: 30.7352564103
-# - dependency: 45.3333333333
-  - target:
-    - dir: client/target/classes
-      file: cn/wildfirechat/proto/WFCMessage$RouteRequest$Builder.class
-      sourceDir: client/src/main/java
-      sourceFile: cn/wildfirechat/proto/WFCMessage.java
-#Target TGF: 585.145060691
-# - methods: 82
-# - complexity: 3962
-# - construction: 37.1
-# - dependency: 25.8778711485
-  - target:
-    - dir: broker/target/classes
-      file: io/moquette/persistence/DatabaseStore.class
-      sourceDir: broker/src/main/java
-      sourceFile: io/moquette/persistence/DatabaseStore.java
-#Target TGF: 384.449358974
-# - methods: 86
-# - complexity: 1138
-# - construction: 28.1935897436
-# - dependency: 42.3333333333
-  - target:
-    - dir: client/target/classes
-      file: cn/wildfirechat/proto/WFCMessage$GroupInfo$Builder.class
-      sourceDir: client/src/main/java
-      sourceFile: cn/wildfirechat/proto/WFCMessage.java
-#Target TGF: 471.270192308
-# - methods: 100
-# - complexity: 1483
-# - construction: 34.4019230769
-# - dependency: 50.3333333333
-  - target:
-    - dir: client/target/classes
-      file: cn/wildfirechat/proto/WFCMessage$ChannelInfo$Builder.class
-      sourceDir: client/src/main/java
-      sourceFile: cn/wildfirechat/proto/WFCMessage.java
-#Target TGF: 368.772008547
-# - methods: 87
-# - complexity: 969
-# - construction: 25.8121794872
-# - dependency: 28.6666666667
-  - target:
-    - dir: client/target/classes
-      file: cn/wildfirechat/proto/WFCMessage$RouteRequest.class
-      sourceDir: client/src/main/java
-      sourceFile: cn/wildfirechat/proto/WFCMessage.java
-#Target TGF: 555.728525641
-# - methods: 112
-# - complexity: 1765
-# - construction: 40.3185897436
-# - dependency: 58.3333333333
-  - target:
-    - dir: client/target/classes
-      file: cn/wildfirechat/proto/WFCMessage$User$Builder.class
-      sourceDir: client/src/main/java
-      sourceFile: cn/wildfirechat/proto/WFCMessage.java
-#Target TGF: 381.752136752
-# - methods: 98
-# - complexity: 1313
-# - construction: 33.9852564103
-# - dependency: 48.3333333333
-  - target:
-    - dir: client/target/classes
-      file: cn/wildfirechat/proto/WFCMessage$MessageContent$Builder.class
-      sourceDir: client/src/main/java
-      sourceFile: cn/wildfirechat/proto/WFCMessage.java
-#Target TGF: 629.824906892
-# - methods: 91
-# - complexity: 6681
-# - construction: 48.1428571429
-# - dependency: 23.2841630592
-  - target:
-    - dir: broker/target/classes
-      file: io/moquette/persistence/MemoryMessagesStore.class
-      sourceDir: broker/src/main/java
-      sourceFile: io/moquette/persistence/MemoryMessagesStore.java
-#Target TGF: 470.327564103
-# - methods: 100
-# - complexity: 1203
-# - construction: 32.1455128205
-# - dependency: 34.6666666667
-  - target:
-    - dir: client/target/classes
-      file: cn/wildfirechat/proto/WFCMessage$User.class
-      sourceDir: client/src/main/java
-      sourceFile: cn/wildfirechat/proto/WFCMessage.java
+      sourceFile: io/moquette/spi/impl/security/AES.java
 dependenciesOnClasspath:
 -
   source: classes
